[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"
description = "The Mandelbrot example from Programming Rust 2nd Edition Chapter 2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
image = "0.24.7"
num = "0.4.1"
num_cpus = "1.16.0"
